examples/test/testpolicy10550.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10550
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key14: value35
      key30: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value13
          key8: value14
      podSelector:
        matchLabels:
          key1: value35
